<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.fragment.DownloadFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/baseline_cast_24"
            app:layout_constraintEnd_toStartOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/archivo_bold"
            android:text="@string/download_toolbar_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/tv.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_bold"
                android:padding="15dp"
                android:text="@string/download_ly_tv"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <Button
            android:id="@+id/btnEditDwn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/dwn_edit_btn_color"
            android:insetLeft="15dp"
            android:text="@string/download_btn_text_edit"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btnDwnMoreVd"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dwn_edit_btn_color"
            android:text="@string/download_btn_text_more"
            android:textAllCaps="false"
            android:textSize="12dp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvDownload" />

        <TextView
            android:id="@+id/tvAutoDwn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/archivo_bold"
            android:text="@string/auto_download"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/tvManage"
            app:layout_constraintStart_toStartOf="@+id/btnDwnMoreVd"
            app:layout_constraintTop_toBottomOf="@+id/btnDwnMoreVd" />

        <TextView
            android:id="@+id/tvManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/archivo_bold"
            android:text="@string/auto_download_manage"
            android:textColor="@color/prime_text_color"
            app:layout_constraintEnd_toEndOf="@+id/btnDwnMoreVd"
            app:layout_constraintStart_toEndOf="@+id/tvAutoDwn"
            app:layout_constraintTop_toBottomOf="@+id/btnDwnMoreVd" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
